--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -16,7 +16,7 @@
                 </p>
             </div>
             <div *ngIf="badRequestError">
-                <span class="danger"><i>Username or Password Incorect</i></span>
+                <span class="danger" style="margin-bottom: 5px;"><i>Username or Password Incorect</i></span>
             </div>
             <div class="field is-pulled-right">
                 <p class="control">
