--- a/src/app/pages/cycle/cycle.component.html
+++ b/src/app/pages/cycle/cycle.component.html
@@ -11,7 +11,28 @@
             <button class="button is-primary has-text-white" routerLink="/new-cycle">Create Cycle</button>
         </div>
         <div class="profile has-background-light">
-            <h1 class="title has-text-primary">CYCLE DETAILS</h1>
+            <div class="top-bar">
+                <div class="dropdown is-pulled-left">
+                <h1 class="title has-text-primary">CYCLE DETAILS</h1>
+                </div>
+                <div class="dropdown is-pulled-right">
+                    <div class="dropdown-trigger">
+                        <button class="button" aria-haspopup="true" aria-controls="dropdown-menu4">
+                            <span>ok</span>
+                            <span class="icon is-small">
+                                <i class="fas fa-cog" aria-hidden="true"></i>
+                            </span>
+                        </button>
+                    </div>
+                </div>
+                <div class="dropdown-menu" id="dropdown-menu4" role="menu">
+                    <div class="dropdown-content">
+                        <a (click)="logout()" class="dropdown-item">
+                            Logout
+                        </a>
+                    </div>
+                </div>
+            </div>
 
             <div class="profile-content">
                 <div class="profile-tags" *ngFor="let wallet of wallets">
@@ -31,9 +52,10 @@
                 </div>
             </div>
             <div class="details">
-            <p *ngIf="alreadyJoined">You has already joined this circle</p>
-            <h3 class="has-text-secondary" *ngIf="lengthOfWallet">{{ lengthOfWallets }} wallets have already signed up.
-            </h3>
+                <p *ngIf="alreadyJoined">You has already joined this circle</p>
+                <h3 class="has-text-secondary" *ngIf="lengthOfWallet">{{ lengthOfWallets }} wallets have already signed
+                    up.
+                </h3>
 
                 <p class="control" type="submit" *ngIf="check">
                     <button (click)="joinCycle()" class="button is-primary has-text-white">
