--- a/src/app/pages/cycle/cycle.component.scss
+++ b/src/app/pages/cycle/cycle.component.scss
@@ -19,7 +19,6 @@
     border-bottom-left-radius: 15px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, .2);
 }
-
 .profile {
     display: flex;
     flex-direction: column;
@@ -28,6 +27,12 @@
     padding: 32px;
     width: 70%;
     box-shadow: 10px 10px 30px 10px rgba(0, 0, 0, .2);
+
+    .top-bar {
+        margin-bottom: 20px;
+        display: flex;
+        
+    }
 }
 
 .list-menu {
@@ -61,7 +66,7 @@
     display: flex;
     background: white;
     padding: 20px 20px;
-    height: 100%;
+    height: 70%;
     width: 100%;
     flex-flow: wrap;
 
@@ -101,4 +106,7 @@
     flex-direction: row;
     flex-grow: 1;
     width: 100%;
+    //background-color: rgb(255, 246, 212);
+    box-shadow: 0 15px 13px snow;
+    overflow-x: auto;
 }
