--- a/src/app/pages/wallet/my-cycles/my-cycles.component.html
+++ b/src/app/pages/wallet/my-cycles/my-cycles.component.html
@@ -7,6 +7,8 @@
                     <p (click)="getDetails(cycle)">{{ cycle }}</p>
                 </a>
             </div>
+
+            <button class="button is-danger has-text-white" routerLink="/wallet">To Wallet</button>
         </div>
         <div class="profile has-background-light">
             <h1 class="title has-text-primary">MY CYCLE DETAILS</h1>
