--- a/src/app/pages/wallet/wallet.component.html
+++ b/src/app/pages/wallet/wallet.component.html
@@ -11,13 +11,15 @@
             <!-- Profile Display-->
             <div class="profile-content">
                 <div class="profile-tags title has-text-primary" [routerLink]="[wallets._id]">FUND WALLET</div>
-                <div class="profile-tags title has-text-primary">WITHDRAWAL</div>
+                <div class="profile-tags title has-text-primary" (click)="navigateWithdraw()">WITHDRAWAL</div>
                 <div class="profile-tags title has-text-primary" (click)="navigate()">MY CYCLES</div>
                 <div class="transactions">
-                    <table class="table is-bordered">
+                    <table class="table is-bordered is-fullwidth">
                         <thead style="width: fit-content;">
                             <tr>
                                 <th>sn</th>
+                                <th>Transaction ID</th>
+                                <th>Date</th>
                                 <th>Amount</th>
                                 <th>Action</th>
                                 <th>Holder</th>
@@ -27,6 +29,8 @@
                         <tbody *ngFor="let transaction of transactions; ; index as i">
                             <tr>
                                 <th>{{ i + 1 }}</th>
+                                <th>{{ transaction.transactionId }}</th>
+                                <th>{{ transaction.date }}</th>
                                 <th>{{ transaction.depositAmount }}</th>
                                 <th>{{ transaction.action }}</th>
                                 <th>{{ transaction.holder }}</th>
