--- a/src/app/pages/admin/admin.component.html
+++ b/src/app/pages/admin/admin.component.html
@@ -5,6 +5,7 @@
             <button (click)="getAllWallets()">View All Wallets</button>
             <button (click)="getAllCycles()">View All Cycles</button>
             <button (click)="fundWalletDisplay()">Fund Wallet</button>
+            <button routerLink="/new-cycle">Create Cycle</button>
         </div>
         <div class="path-container">
             <div class="field is-horizontal">
