--- a/src/app/pages/cycle/cycle.component.scss
+++ b/src/app/pages/cycle/cycle.component.scss
@@ -66,7 +66,7 @@
     display: flex;
     background: white;
     padding: 20px 20px;
-    height: 70%;
+    height: 40%;
     width: 100%;
     flex-flow: wrap;
 
@@ -106,7 +106,26 @@
     flex-direction: row;
     flex-grow: 1;
     width: 100%;
-    //background-color: rgb(255, 246, 212);
     box-shadow: 0 15px 13px snow;
     overflow-x: auto;
 }
+
+.leftpanel {
+    display: inline-flex;
+    flex-direction: column;
+    width: 50%;
+    height: 100%;
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+.rightpanel {
+    display: inline-flex;
+    flex-direction: column;
+    width: 50%;
+    height: 100%;
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+
