--- a/src/app/pages/wallet/wallet.component.scss
+++ b/src/app/pages/wallet/wallet.component.scss
@@ -63,4 +63,18 @@
         width: 100%;
         justify-content: center;
     }
+
+    .flex {
+        display: flex;
+        flex-direction: row;
+    }
+}
+
+.navigation {
+    position: absolute;
+    right: 7%;
+    width: 20%;
+    height: 10%;
+    display: flex;
+    flex-direction: row;
 }
