--- a/src/main-styles.scss
+++ b/src/main-styles.scss
@@ -56,3 +56,29 @@ html, body {
     padding: 35px;
 }
 
+.navigation {
+    position: absolute;
+    right: 0%;
+    width: 20%;
+    height: 10%;
+    display: flex;
+    flex-direction: row;
+}
+
+.todashboard:hover {
+
+    a {
+            color: red;
+            font-size: larger;
+    }
+
+}
+
+.logout:hover {
+
+    a {
+            color: red;
+            font-size: larger;
+    }
+
+}
