--- a/src/app/pages/welcome/progress/progress-step/progress-step.component.scss
+++ b/src/app/pages/welcome/progress/progress-step/progress-step.component.scss
@@ -19,3 +19,9 @@
     transform: translateY(-8px);
     opacity: 0;
 }
+
+@media only screen and (max-width: 720px) {
+    :host.activeStep {
+        margin-top: 10%;
+    }
+}
