--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -10,7 +10,7 @@
         <app-progress>
           <app-progress-step>
             <!--Start of Step 1-->
-            <p>What is <b>THE CYCLE</b> ?</p>
+            <h3>What is <b>THE CYCLE</b> ?</h3>
             <p><b>THE CYCLE</b> is a safe and secure centralised contribution platform where everyone participates in a
               monthly or weekly contribution.</p>
             <p>First things First. Lets get to know you</p>
@@ -50,29 +50,49 @@
               <form [formGroup]="userForm2" (ngSubmit)="updateUser(userForm2)">
                 <div class="form-box">
                   <div class="field">
+                    <p>I need to know and if so, i got a quick question for you. <b>{{ user.firstName }}</b> i go fit
+                      get your control?
+                      beacuse Normally, i for like to reach you easily with notifications and all the important bonuses
+                      but also
+                      this is the first stage of our trust process.
+                      <i style="color: red;">LET'S GO</i>
+                    </p>
                     <p class="control is-expanded">Phone Number:
-                      <input class="input" placeholder="Phone Number"
-                        formControlName="phoneNumber">
+                      <input class="input" placeholder="Phone Number" formControlName="phoneNumber">
                       <span *ngIf="onlyNumbersPhone"><i style="color: red; font-size: smaller;">Invalid
                           Number</i></span>
                     </p>
                   </div>
                   <div class="field">
+                    <p><b>{{ user.lastName }}</b> should also be the last name on your BVN, if not you should go back to
+                      the first step and get that right. I am not doing and cannot do anything with your BVN, this is
+                      only for verification purposes, this marks stage two of our trust process. <i
+                        style="color: red;">I only
+                        need your trust.</i></p>
                     <p class="control is-expanded">Bank Verification Number
-                      <input class="input" placeholder="BVN"
-                        formControlName="bvn">
+                      <input class="input" placeholder="BVN" formControlName="bvn">
                       <span *ngIf="onlyNumbersBvn"><i style="color: red; font-size: smaller;">Invalid Number</i></span>
                     </p>
                   </div>
                   <div class="field">
+                    <p>Great Job so far <b>{{ user.firstName }}</b> its going to take a couple hours to verify all the
+                      info, and the Federal Goverment of Nigeria has made all financial transactions be linked to your
+                      NIN.
+                      Why don't you go on right ahead and add your NIN to the form <i style="color: red;">{{
+                        user.firstName }}
+                        {{ user.lastName }} you are literally a member of <b style="color: green;">THE CYCLE.
+                          WELCOME!!!</b></i></p>
                     <p class="control is-expanded">National Identity Number
-                      <input class="input" placeholder="NIN"
-                        formControlName="nin">
+                      <input class="input" placeholder="NIN" formControlName="nin">
                       <span *ngIf="onlyNumbersNin"><i style="color: red; font-size: smaller;">Invalid Number</i></span>
                     </p>
                   </div>
                 </div>
                 <div class="field">
+                  <p><b>THE WORLD IS OUR CANVAS AND WE HAVE A RESPONSIBILITY TO PAINT. THE CYCLE IS HERE TO LET YOU KNOW
+                      THAT YOU DO NOT HAVE TO PAINT ALONE, COME LET US COOPERATE AND GET BECOME SOCIALLY RESPONSIBLE.
+                      CONTRIBUTION OPOR OPOR!
+                    </b></p>
                   <p class="control">
                     <button progressStepPrev class="button is-danger is pulled left">Back</button>
                     <button progressStepNext class="button is-success is-pulled-right" type="submit"
@@ -89,116 +109,119 @@
               <p><b>GREAT!! </b>We only deal with the trustworthy</p>
               <p>How about you tell us more about yourself na...</p>
               <form [formGroup]="userForm3" (ngSubmit)="updateUser(userForm3)">
-                <div class="field is-horizontal">
-                  <div class="field-body">
-                  <div class="field">
-                    <p class="control">Occupation:
-                      <input class="input" placeholder="What do your do"
-                        formControlName="occupation">
-                    </p>
-                  </div>
-                  <div class="field">
-                    <p class="control">Age
-                      <input class="input" placeholder="How old are you?"
-                        formControlName="age">
-                      <span *ngIf="onlyNumbersAge"><i style="color: red; font-size: smaller;">Invalid Number</i></span>
-                    </p>
-                  </div>
-                </div>
-                </div>
-
-
-                <div class="field is-horizontal">
-                  <div class="field-body">
+                <div class="field">
+                  <div class="form-box">
                     <div class="field">
-                      <p class="control is-expanded has-icons-left">
-                        <input class="input" type="text" placeholder="Name">
+                      <p class="control">Occupation:
+                        <input class="input" placeholder="What do your do" formControlName="occupation">
                       </p>
                     </div>
                     <div class="field">
-                      <p class="control is-expanded has-icons-left has-icons-right">
-                        <input class="input is-success" type="email" placeholder="Email" value="alex@smith.com">
-                      </p>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="field is-horizontal">
-                  <div class="field-body">
-                    <div class="field is-narrow">
                       <div class="control">
-                        <p>Occupation</p>
-                        <div class="select is-fullwidth">
-                          <select>
-                            <option>Banker</option>
-                            <option>Civil Servant</option>
-                            <option>Sales</option>
-                          </select>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="field-body">
-                    <div class="field is-narrow">
-                      <div class="control">
-                        <div class="select is-fullwidth">
-                          <select>
-                            <option>Business development</option>
-                            <option>Marketing</option>
-                            <option>Sales</option>
-                          </select>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="field-body">
-                    <div class="field is-narrow">
-                      <div class="control">
+                        <p>Salary:</p>
                         <div class="select is-fullwidth">
                           <select formControlName="salary">
-                            <option>10,000 - 50,000</option>
-                            <option>50,000 - 100,000</option>
-                            <option>100,000 - 200,000</option>
-                            <option>200,000 - 500,000</option>
-                            <option>500,000 - 1,000,000</option>
+                            <option>Less than N50,000</option>
+                            <option>More than N50,000</option>
+                            <option>Less than N100,000</option>
+                            <option>More than N100,000</option>
                           </select>
                         </div>
                       </div>
                     </div>
-                  </div>
-                </div>
-
-                <div class="field-body">
-                  <div class="field">
-                    <p class="control">Occupation:
-                      <input class="input" placeholder="What do your do">
+                    <p><i style="color: red"> (The above information set the range of cycles you can participate in)</i>
                     </p>
                   </div>
-                  <div class="field">
-                    <p class="control">Age
-                      <input class="input" placeholder="How old are you?">
-                      <span *ngIf="onlyNumbersAge"><i style="color: red; font-size: smaller;">Invalid Number</i></span>
-                    </p>
-                  </div>
-                </div>
 
-                <div class="field is-horizontal">
-                  <div class="field-body">
-                    <div class="field">
-                      <div class="control">
-                        <p>Address</p>
-                        <textarea class="textarea" placeholder="Explain how we can help you"></textarea>
+                  <p>We need to link to your bank. Please provide the details below</p>
+                  <div class="field is-horizontal">
+                    <div class="field-body">
+                      <div class="field">
+                        <p class="control is-expanded has-icons-left">Account Number:
+                          <input class="input" type="text" placeholder="XXXXXXXXXX" formControlName="accountNumber">
+                        </p>
+                      </div>
+                      <div class="field">
+                        <p class="control is-expanded has-icons-left has-icons-right">Bank:
+                          <input class="input is-success" type="email" placeholder="Email" formControlName="bank">
+                        </p>
                       </div>
                     </div>
                   </div>
-                </div>
 
-                <div class="field">
-                  <p class="control">
-                    <button progressStepPrev class="button is-danger is pulled left">Back</button>
-                    <button progressStepNext class="button is-success is-pulled-right" type="submit"
-                      [disabled]="userForm1.invalid">Next</button>
-                  </p>
+                  <p><b style="color: green">Almost There!!</b>We just need a few more information.</p>
+                  <div class="form-box">
+                      <div class="field is-narrow">
+                        <div class="control">
+                          <p>Age:</p>
+                          <div class="select is-fullwidth">
+                            <input class="input" placeholder="Phone Number" formControlName="age">
+                          </div>
+                        </div>
+                    </div>
+                      <div class="field is-narrow">
+                        <div class="control">
+                          <p>Marital Status:</p>
+                          <div class="select is-fullwidth">
+                            <select formControlName="maritalStatus">
+                              <option>Single</option>
+                              <option>Married</option>
+                              <option>Not Sure</option>
+                            </select>
+                          </div>
+                        </div>
+                    </div>
+                      <div class="field is-narrow">
+                        <div class="control">
+                          <p>Origin:</p>
+                          <div class="select is-fullwidth">
+                            <select formControlName="origin">
+                              <option>African</option>
+                              <option>American</option>
+                              <option>Asian</option>
+                              <option>European</option>
+                              <option>Not Sure</option>
+                            </select>
+                          </div>
+                        </div>
+                    </div>
+                  </div>
+
+                  <p>Share some information about a relative we can verify</p>
+                  <div class="field-body">
+                    <div class="field">
+                      <p class="control">Next of Kin Name:
+                        <input class="input" formControlName="nextOfKinName" placeholder="Enter Name Here...">
+                      </p>
+                    </div>
+                    <div class="field">
+                      <p class="control">Next of Kin Phone Number:
+                        <input class="input" placeholder="Phone Number" formControlName="nextOfKinPhoneNumber">
+                        <span *ngIf="onlyNumbersAge"><i style="color: red; font-size: smaller;">Invalid
+                            Number</i></span>
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="field is-horizontal">
+                    <div class="field-body">
+                      <div class="field">
+                        <div class="control">
+                          <p>Enter your Full Address:</p>
+                          <textarea formControlName="address" class="textarea"
+                            placeholder="Street, Town, City, State"></textarea>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="field">
+                    <p class="control">
+                      <button progressStepPrev class="button is-danger is pulled left">Back</button>
+                      <button progressStepNext class="button is-success is-pulled-right" type="submit"
+                        [disabled]="userForm1.invalid">Next</button>
+                    </p>
+                  </div>
                 </div>
               </form>
             </div>
